Add jsdom and vitest as dev dependencies
Updated package.json to include jsdom and vitest for testing. This will enable improved testing capabilities using the Vitest framework and jsdom for DOM emulation.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^20.11.25",
     "builtin-modules": "^3.3.0",
     "esbuild": "^0.20.1",
+    "jsdom": "^27.4.0",
     "obsidian": "^1.5.12",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
