--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "obsidian": "^1.5.12",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
-    "vitest": "^1.6.0"
+    "vitest": "^1.6.0",
+    "jsdom": "27.4.0"
   }
 }
