Fix typecheck for panel view and tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    "types": [
+      "vitest"
+    ],
     "baseUrl": ".",
     "inlineSourceMap": true,
     "inlineSources": true,
